Switch realm